# oyez

./: .gitignore  design.rst  main.py  pyproject.toml
oyez/: changes.py  changes_reader.py  cli.py  composer.py  default_template.jinja  entities.py  interfaces.py  package.py  writer.py
test_data/: 1.feature  2.bugfix
