[tool.poetry]
name = "oyez"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
